# Webserver

./: .gitignore  CMakeLists.txt  MimeType.cpp  MimeType.h  WebServer.cpp  armhf.toolchain  clang-x64-toolchain.txt  firewall.txt  fullchain.pem  jsconfig.json  phptest.cpp  privkey.pem  template.txt  utility.cpp  utility.h
DynamischeSeiten/: CMakeLists.txt
DynamischeSeiten/benutzer/: CMakeLists.txt  benutzer.cpp
DynamischeSeiten/demo/: ordner.cpp
DynamischeSeiten/ordner/: CMakeLists.txt  ordner.cpp
DynamischeSeiten/phprun/: CMakeLists.txt  phprun.cpp  phprun.cpp.save
Http/: CMakeLists.txt  Connection.cpp  Connection.h  Frame.cpp  Frame.h  HPack.cpp  HPackDecoder.cpp  HPackDecoder.h  HPackEncoder.cpp  HPackEncoder.h  Http.cpp  Http.def  Http.h  Http2.cpp  Http2.h  HttpRequestBuffer.cpp  Request.cpp  Request.h  Response.h  Setting.h  Socket.cpp  Socket.h  SocketListener.cpp  SocketListener.h  Stream.cpp  Stream.h  TLSSocket.cpp  TLSSocket.h  TLSSocketListener.cpp  TLSSocketListener.h  hpack(Old).cpp  hpack.cpp  hpack.h  utility.cpp  utility.h
HttpServerLibrary/: Array.h  ByteArray.cpp  ByteArray.h  CMakeLists.txt  DualByteArray.cpp  DualByteArray.h  Http.cpp  Http.h  Http2.cpp  Http2.h  HttpHeader.cpp  HttpHeader.h  HttpRequestBuffer.cpp  HttpRequestBuffer.h  HttpServer.cpp  HttpServer.h  RecvBuffer.cpp  RecvBuffer.h  hpack.cpp  hpack.h  utility.cpp  utility.h
Net/: CMakeLists.txt  Net.def  Socket.cpp  Socket.h  SocketListener.cpp  SocketListener.h  TLSSocket.cpp  TLSSocket.h  TLSSocketListener.cpp  TLSSocketListener.h
Net/Http/: Connection.h  Header.cpp  Header.h  Request.cpp  Request.h  Response.cpp  Response.h
Net/Http/V1/: Array.h  Connection.cpp  Connection.h  HeaderImpl.cpp  Http.cpp  Http.h  HttpRequestBuffer.h  ResponseImpl.cpp  ResponseImpl.h
Net/Http/V2/: Connection.cpp  Connection.h  ErrorCode.h  Frame.cpp  Frame.h  Http2.cpp  Http2.h  ResponseImpl.cpp  Session.cpp  Session.h  Stream.cpp  Stream.h
Net/Http/V2/HPack/: Decoder.cpp  Decoder.h  Encoder.cpp  Encoder.h  HPack.cpp  HPack.h
Web/: blog.html  folder.css  folder.html  folder.js  index.html
Web/css/: style.css
Webseiten/: CMakeLists.txt
Webseiten/benutzer/: CMakeLists.txt  benutzer.cpp
Webseiten/demo/: CMakeLists.txt  ordner.cpp
Webseiten/ordner/: ordner.cpp
Webseiten/phprun/: CMakeLists.txt  phprun.cpp  phprun.cpp.save
WebserverConsole/: CMakeLists.txt  WebserverConsole.cpp
WebserverVS/Http/: Http.vcxproj  Http.vcxproj.filters
WebserverVS/Multicaster/: Multicaster.vcxproj  Multicaster.vcxproj.filters  main.cpp
WebserverVS/Net/: Net.vcxproj  Net.vcxproj.filters
WebserverVS/PHPSapi/: PHPSapi.cpp  PHPSapi.h
WebserverVS/Webserver/: Webserver.cpp  Webserver.vcxproj  Webserver.vcxproj.filters
WebserverVS/Webserver.UWP/: Webserver.UWP.csproj
WebserverVS/Webserver.UWP.WRL/: App.xaml.cpp  App.xaml.h  MainPage.xaml.h  Webserver.UWP.WRL.vcxproj  Webserver.UWP.WRL.vcxproj.filters
WebserverVS/Webserver.UWP.WRL/Generated Files/: AboutPage.xaml  App.xaml  SettingsPage.xaml
Website/js/: uploader.js
cert/christophers-tablet/: fullchain.pem  privkey.pem
cert/localhost/: fullchain.pem  privkey.pem
obsolete/: HttpServer.cpp  HttpServer.h  TCPSocket.cpp  TCPSocket.h  TCPSocketListener.cpp  TCPSocketListener.h  TLSSocketListener.cpp  TLSSocketListener.h  TLSTCPSocket.cpp  TLSTCPSocket.h
web/: blog.html  folder.html  impressum.html  index.html  tmp.txt
web/css/: folder.css  style.css
web/js/: folder.js
win/arm/: libcrypto.lib  libssl.lib
