cmake_minimum_required (VERSION 2.6)
project (WebServer-cpp)

add_compile_options(-std=c++14)

if(WIN32 AND (CMAKE_SIZEOF_VOID_P EQUAL 8))
#set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS)
include_directories(C:\\OpenSSL-Win64\\include)
link_directories(C:\\OpenSSL-Win64\\lib\\VC)
elseif(WIN32)
include_directories(C:\\Users\\Christopher\\Downloads\\openssl-1.1.0c\\openssl-1.1.0c\\include)
link_directories(C:\\Users\\Christopher\\Downloads\\openssl-1.1.0c\\openssl-1.1.0c)
elseif(UNIX)
endif()

include_directories("${PROJECT_SOURCE_DIR}/HttpServerLibrary")
add_subdirectory(HttpServerLibrary)
add_subdirectory(DynamischeSeiten)

add_executable(WebServer WebServer.cpp)
if(WIN32 AND (CMAKE_SIZEOF_VOID_P EQUAL 8))
target_link_libraries (WebServer HttpServerLibrary libssl64MD libcrypto64MD)
elseif(WIN32)
target_link_libraries (WebServer HttpServerLibrary)
elseif(UNIX)
set_property(TARGET WebServer PROPERTY INSTALL_RPATH $ORIGIN)
target_link_libraries (WebServer HttpServerLibrary stdc++ stdc++fs pthread dl ssl crypto)
endif()

install (TARGETS WebServer DESTINATION bin)

if(UNIX)
include_directories(/usr/include/php/20151012/)
include_directories(/usr/include/php/20151012/main)
include_directories(/usr/include/php/20151012/TSRM)
include_directories(/usr/include/php/20151012/Zend)
add_compile_options(-DZEND_SIGNALS -DHAVE_CONFIG_H -D_REENTRANT -DPHP_ATOM_INC)
add_executable(PHPTest phptest.cpp)
target_link_libraries (PHPTest stdc++ php7)
endif()