cmake_minimum_required (VERSION 2.6)
project (WebServer-c++)

add_compile_options(-std=c++14)

if(WIN32 AND (CMAKE_SIZEOF_VOID_P EQUAL 8))
#set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS)
include_directories(C:\\OpenSSL-Win64\\include)
link_directories(C:\\OpenSSL-Win64\\lib\\VC)
elseif(WIN32)
include_directories(C:\\Users\\Christopher\\Documents\\openssl-1.1.0c\\include)
link_directories(C:\\Users\\Christopher\\Documents\\openssl-1.1.0c\\Win32)
elseif(UNIX)
endif()

include_directories("${PROJECT_SOURCE_DIR}/HttpServerLibrary")
add_subdirectory(HttpServerLibrary)
add_subdirectory(DynamischeSeiten)

add_executable(WebServer WebServer.cpp)
if(WIN32 AND (CMAKE_SIZEOF_VOID_P EQUAL 8))
target_link_libraries (WebServer HttpServerLibrary libssl64MD libcrypto64MD)
elseif(WIN32)
target_link_libraries (WebServer HttpServerLibrary)
elseif(UNIX)
set_property(TARGET WebServer PROPERTY INSTALL_RPATH $ORIGIN)
target_link_libraries (WebServer HttpServerLibrary stdc++ stdc++fs pthread dl ssl crypto)
endif()

install (TARGETS WebServer DESTINATION bin)