cmake_minimum_required (VERSION 2.6)
project (WebServer)

if(WIN32)
#set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS 1)
add_compile_options(/utf-8)
include_directories(C:/Users/Christopher/Documents/openssl/include)
link_directories(C:/Users/Christopher/Documents/openssl/bin/Release/ARM)
elseif(UNIX)
add_compile_options(-std=c++14)
endif()

include_directories(.)
add_subdirectory(Http)
add_subdirectory(WebserverConsole)
add_subdirectory(Webseiten)