add_library(HttpServerLibrary SHARED HttpServer.cpp HttpRequestBuffer.cpp HttpHeader.cpp ByteArray.cpp utility.cpp)
if(WIN32 AND (CMAKE_SIZEOF_VOID_P EQUAL 8))
target_link_libraries (HttpServerLibrary libssl64MD libcrypto64MD)
elseif(UNIX)
target_link_libraries (HttpServerLibrary stdc++ stdc++fs pthread dl ssl crypto)
endif()
install (TARGETS HttpServerLibrary DESTINATION bin)
#install (FILES HttpServer.h HttpRequestBuffer.h HttpHeader.h ByteArray.h utility.h DESTINATION include)