add_library(HttpServerLibrary SHARED HttpServer.cpp HttpRequestBuffer.cpp Http.cpp Http2.cpp hpack.cpp utility.cpp)
if(WIN32 AND (CMAKE_SIZEOF_VOID_P EQUAL 8))
target_link_libraries (HttpServerLibrary libssl64MD libcrypto64MD)
elseif(WIN32)
target_link_libraries (HttpServerLibrary libssl libcrypto)
elseif(UNIX)
target_link_libraries (HttpServerLibrary stdc++ stdc++fs pthread dl ssl crypto php7 xml2)
endif()
install (TARGETS HttpServerLibrary DESTINATION bin)
#install (FILES HttpServer.h HttpRequestBuffer.h Http.h Array.h utility.h DESTINATION include)