add_library(Net SHARED Socket.cpp SocketListener.cpp ../utility.cpp TLSSocket.cpp TLSSocketListener.cpp Http/Header.cpp Http/Request.cpp Http/Response.cpp Http/V1/Connection.cpp Http/V1/Http.cpp Http/V2/Connection.cpp Http/V2/Frame.cpp Http/V2/Session.cpp Http/V2/Stream.cpp Http/V2/HPack/HPack.cpp)
if(WIN32)
target_link_libraries (Net libssl libcrypto ws2_32.lib)
elseif(UNIX)
target_link_libraries (Net stdc++ pthread dl ssl crypto)
endif()
install (TARGETS Net DESTINATION bin)
#install (FILES HttpServer.h HttpRequestBuffer.h Http.h Http2.h hpack.h Array.h utility.h DESTINATION include)
