if(WIN32)
include_directories(C:\\Users\\Christopher\\Documents\\php-7.1.0)
include_directories(C:\\Users\\Christopher\\Documents\\php-7.1.0\\main)
include_directories(C:\\Users\\Christopher\\Documents\\php-7.1.0\\TSRM)
include_directories(C:\\Users\\Christopher\\Documents\\php-7.1.0\\Zend)
link_directories(C:\\Users\\Christopher\\Documents\\php-7.1.0\\x64\\Debug_TS)
add_compile_options("/D _WINDOWS" "/D ZEND_WIN32=1" "/D PHP_WIN32=1" "/D WIN32" "/D _MBCS" "/D _DEBUG" "/D ZEND_DEBUG=1" "/D ZTS=1" "/D FD_SETSIZE=256")
endif()
add_library(phprun SHARED phprun.cpp)
target_link_libraries (phprun HttpServerLibrary php7ts_debug php_opcache)
install (TARGETS phprun DESTINATION web)