add_library(phprun SHARED phprun.cpp)
if(WIN32)
include_directories(C:\\Users\\Christopher\\Documents\\php-7.1.0)
include_directories(C:\\Users\\Christopher\\Documents\\php-7.1.0\\main)
include_directories(C:\\Users\\Christopher\\Documents\\php-7.1.0\\TSRM)
include_directories(C:\\Users\\Christopher\\Documents\\php-7.1.0\\Zend)
link_directories(C:\\Users\\Christopher\\Documents\\php-7.1.0\\x64\\Debug_TS)
add_definitions(-D_WINDOWS -DZEND_WIN32=1 -DPHP_WIN32=1 -DWIN32 -D_MBCS -D_DEBUG -DZEND_DEBUG=1 -DZTS=1 -DFD_SETSIZE=256)
target_link_libraries (phprun HttpServerLibrary php7ts_debug php_opcache)
else()
include_directories(/usr/include/php/20151012/)
include_directories(/usr/include/php/20151012/main)
include_directories(/usr/include/php/20151012/TSRM)
include_directories(/usr/include/php/20151012/Zend)
link_directories(/mnt/c/Users/Christopher/WebServer-cpp)
add_compile_options(-DHAVE_CONFIG_H -D_REENTRANT -DPHP_ATOM_INC)
target_link_libraries (phprun HttpServerLibrary php7)
endif()
install (TARGETS phprun DESTINATION web)